# ethsf_confer

./: .gitignore  Cargo.toml  Dockerfile  README.md  add.code  package-lock.json  package.json
api/: Cargo.toml
api/src/: main.rs
contracts/: ConfidentialTransaction.sol
public/: index.html
src/: index.js
src/actions/: index.js  types.js
src/assets/css/: shared.css
src/assets/sass/: _responsive.scss  _variables.scss  shared.scss
src/pages/: Body.js  Header.js  Home.js  Trade.js  Wallet.js  WalletToo.js
src/reducers/: index.js  stage_reducer.js  test_reducer.js  user_reducer.js
zokrates/: README.md  confidentx.code  confidentx_arg.py  confidentx_test.py  ge_32.code  ge_32_test.py  package-lock.json  package.json  pypy_sha256.py  pypy_sha256_test.py  setup.sh  sha256verify.code  sha256verify_libsnark.code  sha256verify_libsnark_32.code  sha256verify_libsnark_32_test.py  sha_libsnark_null.code  sum_to_32.code  sum_to_32_test.py  verification.key  verifier.sol  zokrates.py
