[package]
name = "api"
version = "0.1.0"
authors = ["Deon <deonsummers91@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_cors = "0.3.0"
serde = "1.0"
serde_derive = "1.0"
# serde_json is just for the example, not required in general
serde_json = "1.0"
rand = "0.5.5"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
